no venues found handler, no venue photo case, update README

--- a/src/index.scss
+++ b/src/index.scss
@@ -70,6 +70,10 @@ div#resultsView {
                 margin-left: 1%;
                 position: relative;
 
+                .photoContainer {
+                    background: #ccc;
+                }
+
                 .photoContainer img {
                     height: 128px;
                     padding: 0;
