--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,6 @@
-@font-face { font-family: "Ionicons"; src: url("https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.eot?v=2.0.1"); src: url("https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.eot?v=2.0.1#iefix") format("embedded-opentype"), url("https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.ttf?v=2.0.1") format("truetype"), url("https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.woff?v=2.0.1") format("woff"), url("https://code.ionicframework.com/ionicons/2.0.1/fonts/ionicons.svg?v=2.0.1#Ionicons") format("svg"); font-weight: normal; font-style: normal; }
+html {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
 
 .delim {
     color: #ccc;
@@ -8,26 +10,29 @@
 }
 
 
-div#filtersView {
+.filtersContainer {
     float: left;
     width: 20%;
 
-    ul#filtersList {
+    ul.filtersListBox {
         list-style: none;
-        font-size: 11px;
         color:#6e6e6e;
 
         .filterTitle {
             font-weight: bold;
         }
+
+        label {
+            font-size: 12px;
+        }
     }
 }
 
-div#resultsView {
+.resultsViewContainer {
     float: left;
     width: 60%;
 
-    ul#recommendationsList  {
+    ul.recommendationsListBox  {
         list-style: none;
 
         li.card {
